# yandex-quasar-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
tests/: test_quasar_cli.py
yandex_quasar_cli/: actions.py  cli.py  settings.py
yandex_quasar_cli/quasar_types/: quasar_capability_on_off.py  quasar_primary.py  quasar_properties.py
