[project]
name = "yandex-quasar-cli"
version = "0.1.3"
description = "Command line interface for Yandex Smart Home API"
readme = "README.md"
authors = [{name = "p1ne"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
keywords = [ "yandex", "quasar", "smart home", "cli"]
dependencies = [
    "click>=8.1.7",
    "msgspec>=0.18.6",
    "pprintpp>=0.4.0",
    "flatdict>=4.0.1",
    "anyconfig>=0.14.0",
    "deepdiff>=6.7.1",
    "twine>=5.0.0",
    "build>=1.1.1"
]

[project.urls]
Homepage = "https://github.com/p1ne/yandex-quasar-cli"
Changelog = "https://github.com/p1ne/yandex-quasar-cli/releases"
Issues = "https://github.com/p1ne/yandex-quasar-cli/issues"
CI = "https://github.com/p1ne/yandex-quasar-cli/actions"

[project.entry-points.console_scripts]
yandex-quasar-cli = "yandex_quasar_cli.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
